--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
         <h2 class="title">Apie</h2>
         <div class="about__card">
           <div class="card__content">
-            <h3 class="content__title">Apie</h3>
             <p class="content__paragraph">
               Esu Justina, man 14 metų. Gyvenu amžiuje, kai išmaniosios
               technologijos yra neatsiejama mūsų gyvenimo dalis. Kasdien
@@ -169,7 +168,7 @@
             <div class="answercont">
               <div class="answer">
                 Ateities technologijos nuolat vystosi, todėl tikslaus atsakymo nėra. Tačiau galime tikėtis tobulėjančių
-                dirbtinio intelekto sistemų, kvantinio kompiuterių plėtros, nanotechnologijų taikymo, atsinaujinančios
+                dirbtinio intelekto sistemų, kvantinių kompiuterių plėtros, nanotechnologijų taikymo, atsinaujinančios
                 energijos šaltinių ir daugelio kitų inovacijų.
               </div>
             </div>
